// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extension > renders with extensionName and config 1`] = `
<div>
  <div
    class="extension-root grow"
  >
    <h2
      class="StyledHeading-sc-1rdh4aw-0 bfBFnV"
    >
      TestExtension
    </h2>
    <div>
      <h3
        class="StyledHeading-sc-1rdh4aw-0 chLmqp"
      >
        Configuration
      </h3>
      <table
        aria-label="Configuration"
        class="StyledTable-sc-1m3u5g-6 jlczSm"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Key
            </th>
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Value
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              apiUrl
            </td>
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              https://example.com
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Extension > renders with extensionName and stageDefinition 1`] = `
<div>
  <div
    class="extension-root grow"
  >
    <h2
      class="StyledHeading-sc-1rdh4aw-0 bfBFnV"
    >
      TestExtension
    </h2>
    <div>
      <h3
        class="StyledHeading-sc-1rdh4aw-0 chLmqp"
      >
        Stage Definitions
      </h3>
      <table
        aria-label="Stage Definitions"
        class="StyledTable-sc-1m3u5g-6 jlczSm"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Key
            </th>
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Value
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              build
            </td>
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              compile
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Extension > renders with extensionName, config, and stageDefinition 1`] = `
<div>
  <div
    class="extension-root grow"
  >
    <h2
      class="StyledHeading-sc-1rdh4aw-0 bfBFnV"
    >
      TestExtension
    </h2>
    <div>
      <h3
        class="StyledHeading-sc-1rdh4aw-0 chLmqp"
      >
        Configuration
      </h3>
      <table
        aria-label="Configuration"
        class="StyledTable-sc-1m3u5g-6 jlczSm"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Key
            </th>
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Value
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              apiUrl
            </td>
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              https://example.com
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <h3
        class="StyledHeading-sc-1rdh4aw-0 chLmqp"
      >
        Stage Definitions
      </h3>
      <table
        aria-label="Stage Definitions"
        class="StyledTable-sc-1m3u5g-6 jlczSm"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Key
            </th>
            <th
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kSxzat"
              scope="col"
            >
              Value
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2"
          >
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              build
            </td>
            <td
              class="StyledTable__StyledTableCell-sc-1m3u5g-0 kCLlzz"
            >
              compile
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Extension > renders with only extensionName 1`] = `
<div>
  <div
    class="extension-root grow"
  >
    <h2
      class="StyledHeading-sc-1rdh4aw-0 bfBFnV"
    >
      TestExtension
    </h2>
  </div>
</div>
`;
